# velib

./: .gitignore  api_mapping.py  data.py  db.py  distances.py  fetching.py  fetching_paris_data.py  geocoding.py  main.py  modelling.py  models.py  ploting.py  plotting.py  pyproject.toml  requirements.txt  scoring.py  velib_api.py
scripts/: create_db.py
