[tool.poetry]
name = "velib-en-mieux"
version = "0.1.0"
description = ""
authors = ["Thomas Legrand <legrand.thomas5@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
requests = "^2.22"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
